fix(auth-impl): handle empty entity in field resolver providers (#2992)